[package]
name = "bitonic-cuda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cudarc = "0.9.15"
rand = "0.8.5"
rayon = "1.8.0"

[build-dependencies]
bindgen = "0.69.1"
cc = "1.0.83"
regex = "1.10.2"
